// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Chart renders Active 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-knTjpY jCfrJz"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jLOYlT ezGncR"
    >
      <button
        className="sc-bSGZAx fYVUqX"
        onClick={[Function]}
      >
        <svg
          className="sc-kZPSHH sc-gRFyCy  loyRgj"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-cWAxUP"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
            fill="currentColor"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-dMLzBS"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-hxCwtQ OnRJE"
    >
      <div
        className="sc-eLHYIy fGUHIg"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-dAEBNM sc-edwNYl eySvuV bCALDv"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-bPnocz"
      >
        <div
          className="sc-gbFqDM ipLwql"
        >
          <button
            className="sc-jjavrh eORxeC"
            onClick={[Function]}
          >
            <p
              className="sc-dAEBNM sc-jSPclO jKsTmR bnNqLc"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cmvVVv"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-kjqWtN kBviOa"
    >
      <div
        className="sc-hwByLP bosUgZ"
      >
        <div
          className="sc-jrVuhE kFirvt"
        >
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              1
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo gUtBMv"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              120
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              2
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo gUtBMv"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              100
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              3
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo gUtBMv"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.6666666666666666,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              80
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              4
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo gUtBMv"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.5,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              60
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              5
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              USA
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo gUtBMv"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.3333333333333333,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              40
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-knTjpY jCfrJz"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jLOYlT ezGncR"
    >
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <div
          className="sc-kEDQaP gOkFea"
          color="piccolo.100"
          size="twoxsmall"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </button>
      <div />
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-cWAxUP"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
            fill="currentColor"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-dMLzBS"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-hxCwtQ OnRJE"
    >
      <div
        className="sc-eLHYIy fGUHIg"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-dAEBNM sc-edwNYl eySvuV bCALDv"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-bPnocz"
      >
        <div
          className="sc-gbFqDM ipLwql"
        >
          <button
            className="sc-jjavrh eORxeC"
            onClick={[Function]}
          >
            <p
              className="sc-dAEBNM sc-jSPclO jKsTmR bnNqLc"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cmvVVv"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-kjqWtN kBviOa"
    >
      <div
        className="sc-hwByLP bosUgZ"
      >
        <div
          className="sc-jrVuhE kFirvt"
        >
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              1
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-jwYuju iCEaBQ"
            />
            <div
              className="sc-frlyyo cwA-dIx"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              120
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              2
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-jwYuju iCEaBQ"
            />
            <div
              className="sc-frlyyo cwA-dIx"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              100
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              3
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-jwYuju iCEaBQ"
            />
            <div
              className="sc-frlyyo cwA-dIx"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.3,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              20
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              4
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-jwYuju iCEaBQ"
            />
            <div
              className="sc-frlyyo fuqjfV"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.75,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -60
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              5
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              USA
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-jwYuju iCEaBQ"
            />
            <div
              className="sc-frlyyo fuqjfV"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -80
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-knTjpY jCfrJz"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jLOYlT ezGncR"
    >
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-kZPSHH sc-gRFyCy  loyRgj"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-cWAxUP"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
            fill="currentColor"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-dMLzBS"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-hxCwtQ OnRJE"
    >
      <div
        className="sc-eLHYIy fGUHIg"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-dAEBNM sc-edwNYl eySvuV bCALDv"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-bPnocz"
      >
        <div
          className="sc-gbFqDM ipLwql"
        >
          <button
            className="sc-jjavrh eORxeC"
            onClick={[Function]}
          >
            <p
              className="sc-dAEBNM sc-jSPclO jKsTmR bnNqLc"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cmvVVv"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-kjqWtN kBviOa"
    >
      <div
        className="sc-hwByLP bosUgZ"
      >
        <div
          className="sc-jrVuhE kFirvt"
        >
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              1
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo jhqpR"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.3333333333333333,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -40
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              2
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo jhqpR"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.5,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -60
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              3
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo jhqpR"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.6666666666666666,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -80
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              4
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo jhqpR"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -100
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <span
              className="sc-gPKDLW faoaGp"
            >
              5
            </span>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-jJUdvr fXiHDy"
            >
              USA
            </div>
          </div>
          <div
            className="sc-WJksd hFSEzO"
          >
            <div
              className="sc-frlyyo jhqpR"
            >
              <div
                className="sc-cuQNSp edxvlN"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-WJksd fYTdlB"
          >
            <div
              className="sc-ksWjrO iKBZvf"
            >
              -120
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table Chart renders NoData 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-knTjpY jCfrJz"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-jLOYlT ezGncR"
    >
      <button
        className="sc-bSGZAx fYVUqX"
        onClick={[Function]}
      >
        <svg
          className="sc-kZPSHH sc-gRFyCy  loyRgj"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-cWAxUP"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
            fill="currentColor"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        className="sc-bSGZAx gtcMal"
        onClick={[Function]}
      >
        <svg
          className="sc-dMLzBS"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-hxCwtQ OnRJE"
    >
      <div
        className="sc-eLHYIy fGUHIg"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-dAEBNM sc-edwNYl eySvuV bCALDv"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-bPnocz"
      >
        <div
          className="sc-gbFqDM ipLwql"
        >
          <button
            className="sc-jjavrh eORxeC"
            onClick={[Function]}
          >
            <p
              className="sc-dAEBNM sc-jSPclO jKsTmR bnNqLc"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-cmvVVv"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-kjqWtN kBviOa"
    >
      <div
        className="sc-fjsWye fAlGpJ"
      >
        <svg
          fill="none"
          height="160"
          width="160"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 0H0v19.876h96V0z"
            fill="#D8E0E3"
          />
          <path
            d="M96 0h64v19.876H96V0z"
            fill="#EAEEF0"
          />
          <path
            d="M137.001 46.708h-137v19.876h137V46.708z"
            fill="#D8E0E3"
          />
          <path
            d="M137.001 46.708h7v19.876h-7V46.708z"
            fill="#EAEEF0"
          />
          <path
            d="M42.001 93.416h-42v19.876h42V93.416z"
            fill="#D8E0E3"
          />
          <path
            d="M42.001 93.416h118v19.876h-118V93.416z"
            fill="#EAEEF0"
          />
          <path
            d="M96 140.124H0V160h96v-19.876z"
            fill="#D8E0E3"
          />
          <path
            d="M96 140.124h49V160H96v-19.876z"
            fill="#EAEEF0"
          />
        </svg>
        <p
          className="sc-dAEBNM sc-eBhLNR iLVnBu fptQLY"
          color="trunks.100"
          size={14}
        >
          No data
        </p>
      </div>
    </div>
  </div>
</div>
`;
